src/components/TaskList/TaskList.module.css
.list {
  box-sizing: border-box;
  max-height: calc(100vh - 160px);
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
.header {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 2rem;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
}
.display {
  width: 100%;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  overflow: scroll;
}
.display::-webkit-scrollbar {
  display: none;
}
.cards {
  box-sizing: border-box;
  padding: 0.5rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
.cards::-webkit-scrollbar {
  display: none;
}
.arrow {
  width: 100%;
  display: flex;
  justify-content: center;
}
.empty {
  box-sizing: border-box;
  display: flex;
  padding: 0.5rem;
  border: 2px solid var(--text-color);
  border-radius: 0.5rem;
  box-shadow: 0 4px 30px var(--bg-primary);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
}

